Fix T63588: Cycles unnecessarily updates background importance sampling map

With modifications by Brecht to solve T77273, crash enabling portal lights.