intern/cycles/render/light.h
@@ -88,6 +88,9 @@ class LightManager {
   bool use_light_visibility;
   bool need_update;
 
+  /* Need to update background (including multiple importance map) */
+  bool need_update_background;
+
   LightManager();
   ~LightManager();
 
@@ -97,7 +100,7 @@ class LightManager {
   void remove_ies(int slot);
 
   void device_update(Device *device, DeviceScene *dscene, Scene *scene, Progress &progress);
-  void device_free(Device *device, DeviceScene *dscene);
+  void device_free(Device *device, DeviceScene *dscene, const bool free_background = true);
 
   void tag_update(Scene *scene);
 
@@ -109,7 +112,7 @@ class LightManager {
    * which doesn't contribute to the scene or which is only used for MIS
    * and scene doesn't need MIS.
    */
-  void disable_ineffective_light(Scene *scene);
+  void test_enabled_lights(Scene *scene);
 
   void device_update_points(Device *device, DeviceScene *dscene, Scene *scene);
   void device_update_distribution(Device *device,
@@ -133,6 +136,9 @@ class LightManager {
 
   vector<IESSlot *> ies_slots;
   thread_mutex ies_mutex;
+
+  bool last_background_enabled;
+  int last_background_resolution;
 };
 
 CCL_NAMESPACE_END
